# automationexercise_autotests

./: .env.bstack  .env.local_emulator  .gitignore  README.md  paths.py  pyproject.toml  requirements.txt  temp.py
pages/: catalog_page.py  login_page.py
schemas/: searchProduct_schema.json
tests/: automationexercise_test.py  automationexercise_tests.py  conftest.py  ui_automationexercise_test.py
tests/api/: api_automationexercise_test.py  conftest.py
tests/mobile/: config.py  conftest.py  mobile_git_tutor_test.py
tests/ui/: conftest.py  ui_automationexercise_test.py
utils/: attach.py  brands.py
